reworked introduction to the distinction between AI and ML

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.tex
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.tex
@@ -415,7 +415,7 @@
         \vfill
 
     \begin{abstract}
-    Anyone who wants to seriously deal with the hypothetical topic of our time ``Artificial Intelligence (AI)'' or ``Machine Learning (ML)'' cannot avoid dealing with the basic ML algorithms, corresponding software tools, libraries and programming systems. However, someone who opens the door for the first time to this equally very exciting as well as arbitrarily complex and, at first glance, confusing world will very quickly be overwhelmed. Here, it is a good idea to consult introductory and systematic tutorials. Therefore, this Getting Started tutorial systematically demonstrates the typical ML work process step-by-step using the very powerful and performant ``Support Vector Classifier (SVC)'' and the widely known and exceptionally beginner-friendly ``Iris Dataset''. Furthermore, the selection of the ``correct'' SVC kernel and its parameters are described and their effects on the classification result are shown.
+    Anyone who wants to seriously deal with the emerging topic of our time ``Artificial Intelligence (AI)'' cannot avoid dealing with the basic mathematical models and algorithms from the field of ``Machine Learning (ML)'' as a subset of AI. However, someone who opens the door for the first time to this equally very exciting as well as arbitrarily complex and, at first glance, confusing world will very quickly be overwhelmed. Here, it is a good idea to consult introductory and systematic tutorials. Therefore, this Getting Started tutorial systematically demonstrates the typical ML work process step-by-step using the very powerful and performant ``Support Vector Classifier (SVC)'' and the widely known and exceptionally beginner-friendly ``Iris Dataset''. Furthermore, the selection of the ``correct'' SVC kernel and its parameters are described and their effects on the classification result are shown.
     \end{abstract}
     \vfill
     
@@ -462,24 +462,37 @@
 
 In the \textbf{digitized work environment}, there is an increasing
 demand for \textbf{Work equipment} to be able to adapt independently and
-in a task-related manner to changing work situations. This
-\textbf{situational adaptivity} can often only be realized through the
-use of \textbf{Artificial Intelligence (AI)} or \textbf{Machine Learning
-(ML)}, depending on the degree of flexibility.
+in a task-related manner to changing work situations. Depending on the
+strength of the degree of flexibility, this \textbf{situational
+adaptivity} can often only be realized by applying mathematical models
+and algorithms from the field of \textbf{Machine Learning (ML)} as a
+subset of \textbf{Artificial Intelligence (AI)}.
 
 Examples of such AI applications in work environments can range from
 comparatively simple \textbf{voice assistance systems} (similar, for
 example, to Siri or Alexa from the private sphere) to partially or even
-\textbf{fully autonomous systems}. Such fully autonomous systems are,
-for example, so-called \textbf{driverless transport systems}, which are
-autonomously driving logistics vehicles in larger industrial plants.
+\textbf{fully autonomous systems}. However, the distinction between the
+individual \textbf{degrees of autonomy} is relatively vague and
+difficult to define, depending on the technical context and the degree
+of abstraction. Crucial for the classification are the degrees of
+\textbf{self-determination}, \textbf{independence}, and \textbf{freedom
+of decision or action} of a technical system towards \textbf{human
+intervention}.
 
-In addition to the numerous very interesting advantages in terms of
-economic efficiency, workload reduction, etc., such fully autonomous
-systems are characterized by a very high level of technical complexity.
-This concerns both their \textbf{operating functions} (e.g.~autonomous
-navigation through complex industrial environments with shared use of
-the roadways by other human-controlled vehicles) and their
+For example, \textbf{driverless transport systems (AGVs)} can navigate
+\textbf{autonomously} through larger industrial facilities using
+self-learned or updated maps and avoid obstacles by independently
+finding and optimizing suitable routes. However, at a higher level of
+abstraction, new logistics tasks are given to them by human operators,
+which is why AGVs tend to be \textbf{highly automated systems} from a
+human perspective.
+
+In addition to the many very interesting advantages in terms of economic
+efficiency, workload reduction, etc., such autonomous or highly
+automated systems are characterized by a very high level of technical
+complexity. This concerns both their \textbf{operating functions}
+(e.g.~autonomous navigation through complex industrial environments with
+shared use of the roadways by other human-controlled vehicles) and their
 \textbf{safety functions} (e.g.~evaluation of interlinked imaging and
 non-imaging safety sensors for monitoring the driving space to avoid
 collisions).
@@ -614,27 +627,40 @@ Von den \textbf{Arbeitsmitteln} in der \textbf{digitalisierten
 Arbeitswelt} wird immer stärker gefordert, dass sie sich selbstständig
 und aufgabenbezogen an sich ändernde Arbeitssituationen anpassen können.
 Diese \textbf{situative Adaptivität} kann je nach Stärke des
-Flexibilisierungsgrades oft nur durch Anwendung von \textbf{Künstlicher
-Intelligenz (KI)} bzw. \textbf{Maschinellem Lernen (ML)} realisiert
+Flexibilisierungsgrades oft nur durch die Anwendung mathematischer
+Modelle und Algorithmen aus dem Bereich des \textbf{Maschinellen Lernens
+(ML)} als Teilmenge der \textbf{Künstlichen Intelligenz (KI)} realisiert
 werden.
 
 Beispiele für solche KI-Anwendungen in der Arbeitswelt reichen von
 vergleichsweise einfachen \textbf{Sprachassistenzsystemen} (ähnlich z.
 B. Siri oder Alexa aus dem privaten Umfeld) bis hin zu teil- oder gar
-\textbf{vollautonomen Systemen}. Solche vollautonomen Systeme sind
-beispielsweise sogenannte \textbf{fahrerlose Transportsysteme}, bei
-denen es sich um autonom fahrende Logistikfahrzeuge in größeren
-Industrieanlagen handelt.
+\textbf{vollautonomen Systemen}. Allerdings ist die Unterscheidung der
+einzelnen \textbf{Autonomiegrade} relativ fließend und je nach
+fachlichem Kontext und Abstraktionsgrad nur schwer zu definieren.
+Maßgeblich für die Einordnung sind die Grade der
+\textbf{Selbstbestimmtheit}, die \textbf{Unabhängigkeit} sowie die
+\textbf{Entscheidungs- bzw. Handlungsfreiheit} eines technischen Systems
+gegenüber \textbf{menschlichem Eingriff}.
+
+Beispielsweise können \textbf{fahrerlose Transportsysteme (FTS)} anhand
+selbst erlernter oder aktualisierter Karten \textbf{autonom} durch
+größere Industrieanlagen navigieren und Hindernissen ausweichen, indem
+sie selbstständig geeignete Routen finden und optimieren. Jedoch werden
+ihnen in einer höheren Abstraktionsebene neue Logistikaufträge durch
+menschliche Bediener vorgegeben, weswegen es sich bei FTS aus
+menschlicher Perspektive eher um \textbf{hochautomatisierte Systeme}
+handelt.
 
 Neben den vielen sehr interessanten Vorteilen bzgl. Wirtschaftlichkeit,
-Arbeitserleichterung usw. kennzeichnet solche vollautonomen Systeme eine
-sehr hohe technische Komplexität. Diese betrifft sowohl ihre
-\textbf{Betriebsfunktionen} (z. B. autonome Navigation durch komplexe
-industrielle Umgebungen bei gemeinsamer Nutzung der Fahrwege durch
-andere menschlich gesteuerte Fahrzeuge) als auch ihre
-\textbf{Sicherheitsfunktionen} (z. B. Auswertung miteinander verknüpfter
-bildgebender und nicht-bildgebender Sicherheitssensorik zur Überwachung
-des Fahrraums zur Kollisionsvermeidung).
+Arbeitserleichterung usw. kennzeichnet solche autonomen oder
+hochautomatisierten Systeme eine sehr hohe technische Komplexität. Diese
+betrifft sowohl ihre \textbf{Betriebsfunktionen} (z. B. autonome
+Navigation durch komplexe industrielle Umgebungen bei gemeinsamer
+Nutzung der Fahrwege durch andere menschlich gesteuerte Fahrzeuge) als
+auch ihre \textbf{Sicherheitsfunktionen} (z. B. Auswertung miteinander
+verknüpfter bildgebender und nicht-bildgebender Sicherheitssensorik zur
+Überwachung des Fahrraums zur Kollisionsvermeidung).
 
 An solche autonomen Systeme und die hierfür eingesetzten KI-Algorithmen
 werden sehr hohe Anforderungen hinsichtlich der \textbf{funktionalen
@@ -1600,7 +1626,7 @@ These also provide information about \textbf{outliers}.
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_28_0.png}\end{center}
         \caption{Boxplots used to explore the data ranges in the Iris dataset}
         \label{fig:boxplots_iris}
@@ -2447,7 +2473,7 @@ variable width. The height of each rectangle then represents the
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_64_0.png}\end{center}
         \caption{Histogram for frequency distribution of the salary}
         \label{fig:histogram_salary}
@@ -2461,7 +2487,7 @@ variable width. The height of each rectangle then represents the
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_65_0.png}\end{center}
         \caption{Histogram for the frequency distribution of the salary in comparison between men and women}
         \label{fig:histogram_male_female}
@@ -2558,7 +2584,7 @@ Choose the color sets from
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_71_0.png}\end{center}
         \caption{Correlation heatmap to explore coherences between single variables in the iris dataset}
         \label{fig:correlation_heatmap}
@@ -2612,7 +2638,7 @@ array([[1., 1., 1., 1., 1.],
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_75_0.png}\end{center}
         \caption{Correlation heatmap, which was cut at its main diagonal without losing any information}
         \label{fig:correlation_heatmap_triangle}
@@ -2660,7 +2686,7 @@ advisable to plot them in a \textbf{scatter plot}.
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_78_0.png}\end{center}
         \caption{Plotting two individual variables of the iris dataset in the scatterplot to explore the relationships between these two}
         \label{fig:scatter_plot}
@@ -2698,7 +2724,7 @@ single row and in the x-axis across a single column.
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_80_0.png}\end{center}
         \caption{Plot all individual variables of the Iris dataset in pairs plot to see both the relationships between two variables and the distribution of the individual variables}
         \label{fig:pairs_plot}
@@ -3415,7 +3441,7 @@ colored confusion matrix.
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_120_0.png}\end{center}
         \caption{Checking the accuracy of the model by using the confusion matrix for cross-validation}
         \label{fig:confusion_matrix}
@@ -3624,25 +3650,25 @@ kernel}) kernel use non linear hyperplanes. The \textbf{default} is
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_135_0.png}\end{center}
         \caption{This group of images shows the effect on the classification by the choice of the different SVC kernels ('linear', 'rbf', 'poly' and 'sigmoid')}
         \label{fig:vary_kernels}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_135_1.png}\end{center}
         \caption{This group of images shows the effect on the classification by the choice of the different SVC kernels ('linear', 'rbf', 'poly' and 'sigmoid')}
         \label{fig:vary_kernels}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_135_2.png}\end{center}
         \caption{This group of images shows the effect on the classification by the choice of the different SVC kernels ('linear', 'rbf', 'poly' and 'sigmoid')}
         \label{fig:vary_kernels}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_135_3.png}\end{center}
         \caption{This group of images shows the effect on the classification by the choice of the different SVC kernels ('linear', 'rbf', 'poly' and 'sigmoid')}
         \label{fig:vary_kernels}
@@ -3674,31 +3700,31 @@ exactly fit the training dataset. The \textbf{default} is
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_137_0.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'gamma' of the 'rbf' kernel}
         \label{fig:vary_gamma_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_137_1.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'gamma' of the 'rbf' kernel}
         \label{fig:vary_gamma_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_137_2.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'gamma' of the 'rbf' kernel}
         \label{fig:vary_gamma_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_137_3.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'gamma' of the 'rbf' kernel}
         \label{fig:vary_gamma_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_137_4.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'gamma' of the 'rbf' kernel}
         \label{fig:vary_gamma_parameter}
@@ -3724,7 +3750,7 @@ as the classifier tries to perfectly fit the training data.
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_139_0.png}\end{center}
         \caption{The plot shows the variation of the SVC parameter 'gamma' against the prediction accuracy}
         \label{fig:plot_vary_gamma}
@@ -3755,43 +3781,43 @@ the training points correctly. The \textbf{default} is \texttt{C=1.0}.
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_141_0.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'C' of the 'rbf' kernel}
         \label{fig:vary_c_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_141_1.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'C' of the 'rbf' kernel}
         \label{fig:vary_c_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_141_2.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'C' of the 'rbf' kernel}
         \label{fig:vary_c_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_141_3.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'C' of the 'rbf' kernel}
         \label{fig:vary_c_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_141_4.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'C' of the 'rbf' kernel}
         \label{fig:vary_c_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_141_5.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'C' of the 'rbf' kernel}
         \label{fig:vary_c_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_141_6.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'C' of the 'rbf' kernel}
         \label{fig:vary_c_parameter}
@@ -3817,7 +3843,7 @@ But be careful: to high \texttt{C} values may lead to
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_143_0.png}\end{center}
         \caption{The plot shows the variation of the SVC parameter 'C' against the prediction accuracy}
         \label{fig:plot_vary_c}
@@ -3853,61 +3879,61 @@ training times}.
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_145_0.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'degree' of the 'poly' kernel}
         \label{fig:vary_degree_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_145_1.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'degree' of the 'poly' kernel}
         \label{fig:vary_degree_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_145_2.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'degree' of the 'poly' kernel}
         \label{fig:vary_degree_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_145_3.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'degree' of the 'poly' kernel}
         \label{fig:vary_degree_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_145_4.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'degree' of the 'poly' kernel}
         \label{fig:vary_degree_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_145_5.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'degree' of the 'poly' kernel}
         \label{fig:vary_degree_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_145_6.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'degree' of the 'poly' kernel}
         \label{fig:vary_degree_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_145_7.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'degree' of the 'poly' kernel}
         \label{fig:vary_degree_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_145_8.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'degree' of the 'poly' kernel}
         \label{fig:vary_degree_parameter}
     \end{figure}
     
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_145_9.png}\end{center}
         \caption{This group of images shows the effect on the classification by the variation of the parameter 'degree' of the 'poly' kernel}
         \label{fig:vary_degree_parameter}
@@ -3933,7 +3959,7 @@ hyperplane leads to \textbf{overfitting} the training data.
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_147_0.png}\end{center}
         \caption{The plot shows the variation of the SVC parameter 'degree' against the prediction accuracy}
         \label{fig:plot_vary_degree}
@@ -4182,7 +4208,7 @@ Iris-versicolor       1.00      0.86      0.92         7
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_165_0.png}\end{center}
         \caption{}
         \label{}
@@ -4336,7 +4362,7 @@ Iris-versicolor       1.00      0.86      0.92         7
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_176_0.png}\end{center}
         \caption{}
         \label{}
@@ -4491,7 +4517,7 @@ Iris-versicolor       1.00      0.86      0.92         7
 \end{Verbatim}
 \end{tcolorbox}
 
-    \begin{figure}[h!]
+    \begin{figure}[!ht]
         \begin{center}\includegraphics[scale=0.6]{Step-by-step_intro_to_ML_with_SVC_and_Iris_files/Step-by-step_intro_to_ML_with_SVC_and_Iris_187_0.png}\end{center}
         \caption{}
         \label{}
