--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -1,29 +1,60 @@
-@TechReport{Kasper_Studie_I4.0_2019,
-  author      = {Björn Kasper},
-  title       = {Industrie 4.0: Technologieentwicklung und sicherheitstechnische Bewertung von Anwendungsszenarien},
-  institution = {Bundesanstalt für Arbeitsschutz und Arbeitsmedizin (BAuA)},
-  year        = {2019},
-  date        = {2019-02-22},
-  number      = {Gd96},
-  pagetotal   = {98},
-  doi         = {10.21934/baua:bericht20190204},
-  url         = {https://www.baua.de/DE/Angebote/Publikationen/Berichte/Gd96.html},
-  urldate     = {2020-10-25},
-  abstract    = {Im Rahmen der Literaturrecherche werden insgesamt neun Anwendungsszenarien (Use Cases) ausgewählt, um den aktuellen Stand der Technologieentwicklung im Kontext von Industrie 4.0 für ausgewählte Industriebereiche darzustellen. Dazu werden zunächst die Konzepte, Grundlagen und Zusammenhänge von Industrie 4.0, die technologischen Basiskomponenten sowie die erforderlichen Referenzarchitekturen vorgestellt.
-Die der aktuellen Literatur entnommenen Anwendungsszenarien werden danach inhaltlich zusammengefasst und in die beschriebenen Industrie 4.0-Konzepte eingeordnet hinsichtlich der in ihnen adressierten Paradigmen und der angewandten Basiskomponenten. Dabei konzentriert sich die Studie insbesondere auf Anwendungsszenarien aus den Bereichen der Fertigungs- und Produktionstechnik im Maschinen- und Anlagenbau. Darüber hinaus werden die Szenarien an den drei Dimensionen der Referenzarchitektur RAMI 4.0 als makroskopische Sicht gespiegelt sowie die vorgestellten Aspekte hinsichtlich der Industrie 4.0-Komponente als mikroskopische Sicht herausgearbeitet.
-Abschließend werden die Anwendungsszenarien dahin gehend bewertet, ob in ihnen grundsätzlich sicherheitstechnische Aspekte der funktionalen Sicherheit (Safety), der industriellen Angriffssicherheit (Security) sowie deren Wechselwirkungen untereinander betrachtet bzw. berücksichtigt werden. Diese Bewertungen basieren auf den Darstellungen der jeweils zitierten Literaturquellen.},
-  file        = {:/home/bk/Seafile/BAuA_Files/Projekt_Sicherheitstechnische_Methoden_Industrie_4.0_SMI4.0/09_Studie_I4.0_Use_Cases/2019-02-22_Studie_I4.0_Technologieentwicklung_Use_Cases_Publikation_Gd96.pdf:PDF},
-  owner       = {bk},
-  timestamp   = {2019-05-11},
-  keywords	  = {book, trusted},
+@Book{ML_ScL_2018,
+  author       = {Raschka, Sebastian and Mirjalili, Vahid},
+  date         = {2018},
+  title        = {Machine Learning mit Python und Scikit-learn und TensorFlow},
+  edition      = {2},
+  isbn         = {978-3-95845-733-1},
+  language     = {German},
+  origlanguage = {English},
+  pages        = {577},
+  publisher    = {{mitp Verlags GmbH \& Co. KG, Frechen}},
+  subtitle     = {Das umfassende Praxis-Handbuch für Data Science, Deep Learning und Predictive Analytics},
+  translator   = {Knut Lorenzen},
+  url          = {https://katalog.ub.uni-heidelberg.de/cgi-bin/titel.cgi?katkey=68206280},
+  urldate      = {2022-08-30},
+  keywords     = {book},
+  owner        = {bk},
 }
 
-@online{parallel-computing,
-	author       = {Blaise Barney},
-	title        = {Introduction to Parallel Computing},
-	url          = {https://csis.pace.edu/~marchese/SE765/L0/Introduction%20to%20Parallel%20Computing.htm},
-	date        = {2012-06-27},
-	urldate      = {2022-08-29},
-	organization = {Lawrence Livermore National Laboratory},
-	keywords  	 = {URL},
+@Book{Geron_2018,
+  author       = {Géron, Aurélien},
+  date         = {2018},
+  title        = {Praxiseinstieg Machine Learning mit Scikit-Learn und TensorFlow},
+  edition      = {1. Auflage},
+  isbn         = {978-3-96010-114-7},
+  language     = {German},
+  location     = {Heidelberg},
+  origlanguage = {English},
+  pages        = {552},
+  publisher    = {O`Reilly},
+  subtitle     = {Konzepte, Tools und Techniken für intelligente Systeme},
+  translator   = {Rother, Kristian},
+  url          = {https://katalog.ub.uni-heidelberg.de/cgi-bin/titel.cgi?katkey=68275614},
+  urldate      = {2022-08-30},
+  keywords     = {book},
+  owner        = {bk},
 }
+
+@Online{Wiki_CUDA,
+  author   = {Wikipedia{: }CUDA},
+  date     = {2022-08-28},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  title    = {CUDA},
+  url      = {https://en.wikipedia.org/w/index.php?title=CUDA&oldid=1107147697},
+  language = {English},
+  urldate  = {2022-08-30},
+  keywords = {URL},
+}
+
+@Online{Wiki_OpenCL,
+  author   = {Wikipedia{: }OpenCL},
+  date     = {2022-08-21},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  title    = {OpenCL},
+  url      = {https://en.wikipedia.org/w/index.php?title=OpenCL&oldid=1105615914},
+  language = {English},
+  urldate  = {2022-08-30},
+  keywords = {URL},
+}
+
+@Comment{jabref-meta: databaseType:biblatex;}
